--- a/documents/30-Days-Javascript/10.Sets_and_Maps.md
+++ b/documents/30-Days-Javascript/10.Sets_and_Maps.md
@@ -233,8 +233,8 @@ function mostSpokenLanguages(countries, n) {
       return acc
     }, {})
   return Object.entries(langCounts)
-    .map(([country, count]) => ({ [country]: count }))
-    .sort((a, b) => Object.values(b)[0] - Object.values(a)[0])
+    .map(([country, count]) => ({ country, count }))
+    .sort((a, b) => b.count - a.count)
     .slice(0, n)
 }
 console.log(mostSpokenLanguages(countries, 10))
