--- a/documents/30-Days-Javascript/12.Regular_Expressions.md
+++ b/documents/30-Days-Javascript/12.Regular_Expressions.md
@@ -18,6 +18,37 @@ Mẫu là một chuỗi hoặc dạng tương tự. Ví dụ: từ "spam" trong 
 - `i`: Không phân biệt hoa/thường (case-insensitive).
 - `m`: Tìm kiếm trên nhiều dòng (multiline).
 
+Ký Tự Đặc Biệt (Metacharacters)
+Những ký tự này có ý nghĩa đặc biệt thay vì khớp với chính nó.
+ * . (dấu chấm): Khớp với bất kỳ ký tự nào, ngoại trừ ký tự xuống dòng mới (\n).
+ * ^: Khớp với vị trí bắt đầu của một chuỗi.
+ * $: Khớp với vị trí kết thúc của một chuỗi.
+ * |: "HOẶC" (OR). Khớp với một trong các mẫu ở hai bên. Ví dụ: a|b khớp với "a" hoặc "b".
+ * (): Nhóm các ký tự lại với nhau. Có thể được sử dụng để áp dụng lượng từ (quantifier) cho cả một nhóm hoặc để trích xuất các khớp con.
+Lượng Từ (Quantifiers)
+Các ký tự này chỉ định số lần một ký tự hoặc một nhóm ký tự có thể lặp lại.
+ * *: Khớp với 0 hoặc nhiều lần của ký tự đứng trước nó.
+ * +: Khớp với 1 hoặc nhiều lần của ký tự đứng trước nó.
+ * ?: Khớp với 0 hoặc 1 lần của ký tự đứng trước nó.
+ * {n}: Khớp chính xác n lần.
+ * {n,}: Khớp ít nhất n lần.
+ * {n,m}: Khớp từ n đến m lần.
+Lớp Ký Tự (Character Classes)
+Các lớp này khớp với một tập hợp các ký tự.
+ * [abc]: Khớp với bất kỳ ký tự nào trong ngoặc vuông (a, b, hoặc c).
+ * [a-z]: Khớp với bất kỳ ký tự nào trong phạm vi từ a đến z.
+ * [^abc]: Khớp với bất kỳ ký tự nào KHÔNG nằm trong ngoặc vuông.
+Viết Tắt (Shorthand Character Classes)
+Đây là những ký tự viết tắt giúp bạn dễ dàng viết biểu thức chính quy hơn.
+ * \d: Khớp với một chữ số (tương đương với [0-9]).
+ * \D: Khớp với một ký tự không phải chữ số (tương đương với [^0-9]).
+ * \s: Khớp với một ký tự khoảng trắng (dấu cách, tab, xuống dòng).
+ * \S: Khớp với một ký tự không phải khoảng trắng.
+ * \w: Khớp với một ký tự từ (chữ cái, số, _).
+ * \W: Khớp với một ký tự không phải từ.
+Hiểu được các ký tự này sẽ giúp bạn tạo ra các biểu thức chính quy mạnh mẽ và linh hoạt hơn nhiều.
+ 
+
 ### Tạo mẫu với RegExp Constructor
 
 Tạo RegExp không có cờ:
