--- a/documents/30-Days-Javascript/18.Promises.md
+++ b/documents/30-Days-Javascript/18.Promises.md
@@ -232,6 +232,29 @@ const fetchLargestCountries = async () => {
 }
 fetchLargestCountries()
 ```
+hoặc dùng `flatMap` :
+
+```js
+const countLanguages = async () => {
+  try {
+    const response = await fetch(countriesAPI);
+    const countries = await response.json();
+    
+    const languages = new Set(countries.flatMap(country => 
+      country.languages?.map(lang => lang.name) || []
+    ));
+    
+    console.log(`Total official languages: ${languages.size}`);
+  } catch (err) {
+    console.error(err);
+  }
+};
+
+countLanguages();
+
+
+```
+
 
 3. **Đếm tổng số ngôn ngữ chính thức trên thế giới**
 
