--- a/documents/30-Days-Javascript/18.Promises.md
+++ b/documents/30-Days-Javascript/18.Promises.md
@@ -279,4 +279,4 @@ countLanguages();
 
 ---
 
-[<< Ngày 17](./17.Web_Storages.md) | [Ngày 19 >>](./19.Closures.md)
+[<< Ngày 17](./17.Web_Storages.md) | [Ngày 19 >>](./19.Closure.md)
