--- a/documents/30-Days-Javascript/19.Closure.md
+++ b/documents/30-Days-Javascript/19.Closure.md
@@ -163,4 +163,4 @@ console.log(account.accountBalance()) // 1200
 
 ---
 
-[<< Ngày 18](./18.Promises.md) | [Ngày 20 >>](./20.Writing_Clean_Codes.md)
+[<< Ngày 18](./18.Promises.md) | [Ngày 20 >>](./20.Writing_Clean_Code.md)
