--- a/documents/30-Days-Javascript/28.Mini_Project:_Leaderboard.md
+++ b/documents/30-Days-Javascript/28.Mini_Project:_Leaderboard.md
@@ -127,106 +127,114 @@
   <div class="player-list" id="playerList"></div>
 
   <script>
-    const firstName = document.getElementById('firstName');
-    const lastName = document.getElementById('lastName');
-    const country = document.getElementById('country');
-    const score = document.getElementById('score');
-    const addPlayerBtn = document.getElementById('addPlayer');
-    const error = document.getElementById('error');
-    const playerList = document.getElementById('playerList');
+      const firstName = document.getElementById('firstName');
+  const lastName = document.getElementById('lastName');
+  const country = document.getElementById('country');
+  const score = document.getElementById('score');
+  const addPlayerBtn = document.getElementById('addPlayer');
+  const error = document.getElementById('error');
+  const playerList = document.getElementById('playerList');
 
-    let players = [
-      { firstName: 'Martha', lastName: 'Yohanes', country: 'Finland', score: 85 },
-      { firstName: 'David', lastName: 'Smith', country: 'United Kingdom', score: 80 },
-      { firstName: 'Asabeneh', lastName: 'Yetayeh', country: 'Finland', score: 75 },
-      { firstName: 'Mathias', lastName: 'Elias', country: 'Sweden', score: 70 }
-    ];
+  let players = [
+    { firstName: 'Martha', lastName: 'Yohanes', country: 'Finland', score: 85 },
+    { firstName: 'David', lastName: 'Smith', country: 'United Kingdom', score: 80 },
+    { firstName: 'Asabeneh', lastName: 'Yetayeh', country: 'Finland', score: 75 },
+    { firstName: 'Mathias', lastName: 'Elias', country: 'Sweden', score: 70 }
+  ];
 
-    function formatDate() {
-      const now = new Date();
-      const options = { year: 'numeric', month: 'short', day: '2-digit',
-                        hour: '2-digit', minute: '2-digit' };
-      return now.toLocaleDateString('en-US', options);
-    }
-
-    function renderPlayers() {
-      playerList.innerHTML = '';
-      players.sort((a, b) => b.score - a.score);
-      players.forEach((p, index) => {
-        const card = document.createElement('div');
-        card.className = 'player-card';
-
-        const info = document.createElement('div');
-        info.className = 'player-info';
-        info.innerHTML = `<span>${p.firstName} ${p.lastName}</span>
-                          <span>${formatDate()}</span>`;
-        const countryDiv = document.createElement('div');
-        countryDiv.textContent = p.country;
-        const scoreDiv = document.createElement('div');
-        scoreDiv.textContent = p.score;
-
-        const controls = document.createElement('div');
-        controls.className = 'controls';
-        const delBtn = document.createElement('button');
-        delBtn.className = 'delete';
-        delBtn.innerHTML = '🗑';
-        delBtn.onclick = () => {
-          players.splice(index, 1);
-          renderPlayers();
-        };
-
-        const plusBtn = document.createElement('button');
-        plusBtn.className = 'plus';
-        plusBtn.textContent = '+5';
-        plusBtn.onclick = () => {
-          players[index].score += 5;
-          renderPlayers();
-        };
-
-        const minusBtn = document.createElement('button');
-        minusBtn.className = 'minus';
-        minusBtn.textContent = '-5';
-        minusBtn.onclick = () => {
-          players[index].score -= 5;
-          renderPlayers();
-        };
-
-        controls.appendChild(delBtn);
-        controls.appendChild(plusBtn);
-        controls.appendChild(minusBtn);
-
-        card.appendChild(info);
-        card.appendChild(countryDiv);
-        card.appendChild(scoreDiv);
-        card.appendChild(controls);
-
-        playerList.appendChild(card);
-      });
-    }
-
-    addPlayerBtn.addEventListener('click', () => {
-      if (!firstName.value || !lastName.value || !country.value || !score.value) {
-        error.style.display = 'block';
-        return;
+  function formatDate() {
+    const now = new Date();
+    const options = { year: 'numeric', month: 'short', day: '2-digit', hour: '2-digit', minute: '2-digit' };
+    return now.toLocaleDateString('en-US', options);
+  }
+  
+  // Hàm xử lý cập nhật điểm số hoặc xóa người chơi
+  function handlePlayerAction(targetPlayer, action) {
+    const playerIndex = players.findIndex(p => p.firstName === targetPlayer.firstName && p.lastName === targetPlayer.lastName);
+    if (playerIndex !== -1) {
+      if (action === 'delete') {
+        players.splice(playerIndex, 1);
+      } else if (action === 'add') {
+        players[playerIndex].score += 5;
+      } else if (action === 'subtract') {
+        players[playerIndex].score -= 5;
       }
-      error.style.display = 'none';
-
-      players.push({
-        firstName: firstName.value,
-        lastName: lastName.value,
-        country: country.value,
-        score: parseInt(score.value)
-      });
-
-      firstName.value = '';
-      lastName.value = '';
-      country.value = '';
-      score.value = '';
-
       renderPlayers();
+    }
+  }
+
+  function renderPlayers() {
+    playerList.innerHTML = '';
+    players.sort((a, b) => b.score - a.score);
+    players.forEach(p => {
+      const card = document.createElement('div');
+      card.className = 'player-card';
+
+      const info = document.createElement('div');
+      info.className = 'player-info';
+      info.innerHTML = `<span>${p.firstName} ${p.lastName}</span>
+                        <span>${formatDate()}</span>`;
+      const countryDiv = document.createElement('div');
+      countryDiv.textContent = p.country;
+      const scoreDiv = document.createElement('div');
+      scoreDiv.textContent = p.score;
+      scoreDiv.className = 'player-score'; // Thêm class để dễ cập nhật
+
+      const controls = document.createElement('div');
+      controls.className = 'controls';
+
+      const delBtn = document.createElement('button');
+      delBtn.className = 'delete';
+      delBtn.innerHTML = '🗑';
+      delBtn.onclick = () => handlePlayerAction(p, 'delete');
+
+      const plusBtn = document.createElement('button');
+      plusBtn.className = 'plus';
+      plusBtn.textContent = '+5';
+      plusBtn.onclick = () => handlePlayerAction(p, 'add');
+
+      const minusBtn = document.createElement('button');
+      minusBtn.className = 'minus';
+      minusBtn.textContent = '-5';
+      minusBtn.onclick = () => handlePlayerAction(p, 'subtract');
+
+      controls.appendChild(delBtn);
+      controls.appendChild(plusBtn);
+      controls.appendChild(minusBtn);
+
+      card.appendChild(info);
+      card.appendChild(countryDiv);
+      card.appendChild(scoreDiv);
+      card.appendChild(controls);
+
+      playerList.appendChild(card);
+    });
+  }
+
+  addPlayerBtn.addEventListener('click', () => {
+    if (!firstName.value || !lastName.value || !country.value || !score.value) {
+      error.style.display = 'block';
+      return;
+    }
+    error.style.display = 'none';
+
+    players.push({
+      firstName: firstName.value,
+      lastName: lastName.value,
+      country: country.value,
+      score: parseInt(score.value)
     });
 
+    firstName.value = '';
+    lastName.value = '';
+    country.value = '';
+    score.value = '';
+
     renderPlayers();
+  });
+
+  renderPlayers();
+
   </script>
 </body>
 </html>
